# advent-of-code-2023

./: .gitignore  Makefile  README.md  pyproject.toml
advent-of-code-2023/: day01.py
c/: Makefile
c/aoc2023/: day01.c  day02.c  day03.c  utils.h
clojure/: day01.clj
janet/aoc2023/: day01.janet  day02.janet  utils.janet
python/: Makefile  pyproject.toml
python/advent-of-code-2023/: day01.py
python/aoc2023/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day19_macro.py  day20.py  day21.py  day22.py
rust/: Cargo.toml
rust/src/: day01.rs  day02.pest  day02.rs  day03.rs  day04.pest  day04.rs
zig/: day01.zig
